[metadata]
name = fuel_ext
version = 2015.1
summary = Fuel Extension
description-file =
    README.rst
author = Mirantis
author-email = sshturm@mirantis.com
home-page = http://www.openstack.org/
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Topic :: Internet :: WWW/HTTP

[files]
packages =
    fuel_ext

[compile_catalog]
domain = fuel_ext

[entry_points]
console_scripts =
    fuel-env = fuel_ext.env:main

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1

